--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="//code.tidio.co/8mf3i8lnmpeiefjzyeok6olpfbvauupz.js" async></script>
+    <script async type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
+    <zapier-interfaces-chatbot-embed is-popup='false' chatbot-id='cmalocxub005ygxzjyqy2039z' height='600px' width='400px'></zapier-interfaces-chatbot-embed>
   </body>
 </html>
